# hemmet

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  README.org  cabal.project.freeze  hemmet.cabal  hie.yaml  package.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
app/: Main.hs
app/common/Hemmet/: App.hs  Cli.hs
app/hemmet/: Main.hs
app/hemmeti/: Main.hs
app/hemmeti/Hemmet/: Tui.hs
examples/: mktree
src/: Hemmet.hs  Lib.hs
src/Hemmet/: App.hs  BEM.hs  Backend.hs  Dom.hs  FileTree.hs  Megaparsec.hs  Rendering.hs  Runner.hs  Template.hs  Transformation.hs  Tree.hs  Zipper.hs
src/Hemmet/App/: Cli.hs  TUI.hs
src/Hemmet/BEM/: Rendering.hs  Template.hs  Transformation.hs  Tree.hs
src/Hemmet/Dom/: Rendering.hs  Template.hs  Tree.hs
src/Hemmet/Dom/Rendering/: Common.hs  KotlinxHtml.hs  Shakespeare.hs
src/Hemmet/FileTree/: Rendering.hs  Template.hs  Transformation.hs  Tree.hs
test/: Golden.hs  Spec.hs  ZipperSpec.hs
test/tests/: complex.hemmet  complex.react-flux.golden
test/tests/bem/: complex.css.golden  complex.hemmet  complex.html.golden  complex.react-flux.golden  minimal.css.golden  minimal.hemmet  minimal.react-flux.golden
test/tests/dom/: complex.cassius.golden  complex.css.golden  complex.elm.golden  complex.hamlet.golden  complex.hemmet  complex.html.golden  complex.ktxhtml.golden  complex.lucid.golden
test/tests/ftree/: complex.bash.golden  complex.hemmet  complex.tree.golden  hs.bash.golden  hs.hemmet  hs.tree.golden  py.bash.golden  py.hemmet  py.tree.golden  unsorted.bash.golden  unsorted.hemmet  unsorted.tree.golden
