name:                hemmet
version:             0.1.0.0
-- synopsis:
description:         Expander for Emmet/ZenCoding-like snippets
homepage:            https://github.com/astynax/hemmet#readme
license:             BSD3
license-file:        LICENSE
author:              Aleksey Pirogov
maintainer:          astynax84@gmail.com
copyright:           Aleksey Pirogov aka astynax
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hemmet
  other-modules:       Hemmet.Rendering
                     , Hemmet.Template
                     , Hemmet.Transformation
                     , Hemmet.Tree
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , parsec
                     , text
  default-language:    Haskell2010
  ghc-options:         -Werror -Wall

executable hemmet
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hemmet
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

test-suite hemmet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  other-modules:       Hemmet.Rendering
                     , Hemmet
                     , Hemmet.Template
                     , Hemmet.Transformation
                     , Hemmet.Tree
  build-depends:       base
                     , bytestring
                     , filepath
                     , Glob
                     , hspec
                     , mtl
                     , parsec
                     , tasty
                     , tasty-golden
                     , tasty-hspec
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/astynax/hemmet
