cabal-version: 2.4

name:                hemmet
version:             0.1.0.0
description:         Emmet/ZenCoding-like text snippet expander
homepage:            https://github.com/astynax/hemmet#readme
bug-reports:         https://github.com/astynax/hemmet/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Aleksei Pirogov
maintainer:          astynax@users.noreply.github.com
copyright:           Aleksei Pirogov aka astynax
category:            Text
build-type:          Simple
tested-with:         GHC==9.2.2, GHC==9.0.2, GHC==8.10.7
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/astynax/hemmet

common basics
  build-depends: base >=4.13.0.0 && <5.0.0.0
  other-modules: Paths_hemmet
  default-language: Haskell2010
  default-extensions: GADTs
                      LambdaCase
                      MultiParamTypeClasses
                      OverloadedStrings
                      RecordWildCards
                      NamedFieldPuns
                      TupleSections
                      ViewPatterns
  ghc-options: -Wall
               -Wcompat
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wredundant-constraints
               -Wmissing-exported-signatures

common exe
  build-depends: hemmet
  ghc-options: -O3 -threaded

library
  import: basics
  hs-source-dirs: src
  exposed-modules: Hemmet
                   Hemmet.Backend
                   Hemmet.BEM
                   Hemmet.BEM.Rendering
                   Hemmet.BEM.Template
                   Hemmet.BEM.Transformation
                   Hemmet.BEM.Tree
                   Hemmet.Dom
                   Hemmet.Dom.Rendering
                   Hemmet.Dom.Rendering.Common
                   Hemmet.Dom.Rendering.KotlinxHtml
                   Hemmet.Dom.Rendering.Shakespeare
                   Hemmet.Dom.Template
                   Hemmet.Dom.Tree
                   Hemmet.FileTree
                   Hemmet.FileTree.Rendering
                   Hemmet.FileTree.Template
                   Hemmet.FileTree.Transformation
                   Hemmet.FileTree.Tree
                   Hemmet.Megaparsec
                   Hemmet.Rendering
                   Hemmet.Runner
                   Hemmet.Tree
  build-depends: megaparsec
               , mtl
               , text

executable hemmet
  import: basics, exe
  main-is: Main.hs
  hs-source-dirs: app/hemmet
                  app/common
  other-modules: Hemmet.Cli
  build-depends: optparse-applicative
               , text

executable hemmeti
  import: basics, exe
  main-is: Main.hs
  hs-source-dirs: app/hemmeti
                  app/common
  other-modules: Hemmet.Cli
               , Hemmet.Tui
  build-depends: brick ^>=1.0
               , microlens
               , megaparsec
               , mtl
               , optparse-applicative
               , text
               , vty

test-suite lib
  import: basics
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules: Golden
  build-depends: Glob
               , bytestring
               , filepath
               , hemmet
               , hspec
               , megaparsec
               , tasty
               , tasty-golden
               , tasty-hspec
               , text
